fix the spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,8 @@ body {
   background: var(--bg-top-image);
   background-color: var(--main-bg);
   background-size: 100vw 250px ;
+  margin: 0 auto;
+  max-width: 38.73%;
 }
 
 .flex-row {
@@ -33,12 +35,10 @@ body {
   align-items: center;
 }
 
-header, body {
-  max-width: 38.73%;
-  margin: 0 auto;
-}
 
 header {
+  margin: 0 auto;
+  width: 100%;
   justify-content: space-between;
   padding: 3rem 0 0;
 }
@@ -73,7 +73,7 @@ header h1 {
 .add-new-item input {
   width: 100%;
   font-size: 1.1rem;
-  height: 2.2rem;
+  height: 3.5rem;
   border-radius: 4px;
   background-color: var(--todo-bg);
   border: 0;
@@ -99,7 +99,7 @@ ul {
 }
 
 ul li {
-  height: 3rem;
+  height: 4rem;
   width: 100%;
   background: var(--todo-bg);
   color: var(--font-color);
@@ -109,14 +109,12 @@ ul li {
 }
 
 li label {
-  /* outline: 1px green solid; */
   position: relative;
   width: 100%;
   cursor: pointer;
 }
 
 li .remove {
-  /* outline: 1px red solid; */
   position: absolute;
   right: 0;
   margin-right: 1%;
@@ -193,7 +191,7 @@ label:hover input[type="checkbox"]:checked + .checkmark .mask{
 /* ============ bottom ========= */
 .bottom-items {
   background-color: var(--todo-bg);
-  padding: 10px;
+  padding: 20px;
   border-radius: 0 0 10px 10px;
   justify-content: space-between;
   box-shadow: 0 1rem 3rem var(--todo-shadow);
